Added methods that increment statistics for Player class

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -106,7 +106,7 @@
     "        self.grassStrength = np.random.normal(loc=1.0, scale=0.5)\n",
     "        \n",
     "        # Player stats\n",
-    "        self.gamesPlayer = 0\n",
+    "        self.gamesPlayed = 0\n",
     "        self.tournamentsWon = {\n",
     "            \"Grand Slam\": 0,\n",
     "            \"ATP Final\": 0,\n",
@@ -114,9 +114,37 @@
     "            \"ATP 500\": 0,\n",
     "            \"ATP 250\": 0\n",
     "        }\n",
+    "        self.rankingPoints = 0\n",
     "        \n",
     "        # Increment ID counter to ensure every player has a unique ID\n",
-    "        Player.idCounter += 1"
+    "        Player.idCounter += 1\n",
+    "        \n",
+    "        def increment_tournament_win(self, tournamentType):\n",
+    "            \"\"\"\n",
+    "            Method:\n",
+    "                Increments the type of tournament the player won\n",
+    "                \n",
+    "            Params:\n",
+    "                tournamentType (str):   The type of tournament won e.g. ATP 500\n",
+    "            \"\"\"\n",
+    "            self.tournamentsWon[tournamentType] += 1\n",
+    "        \n",
+    "        def increment_points(self, points):\n",
+    "            \"\"\"\n",
+    "            Method:\n",
+    "                Increments the players ranking points by given points\n",
+    "                \n",
+    "            Params:\n",
+    "                points (int):   The amount of points to increment by\n",
+    "            \"\"\"\n",
+    "            self.rankingPoints += points\n",
+    "            \n",
+    "        def increment_games_played(self):\n",
+    "            \"\"\"\n",
+    "            Method:\n",
+    "                Increments the gamesPlayed attribute\n",
+    "            \"\"\"\n",
+    "            self.gamesPlayed += 1"
    ]
   },
   {
