--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -65,8 +65,8 @@
     "        self.playerID = Player.idCounter\n",
     "                \n",
     "        # Player attributes\n",
-    "        self.serveStrength = serveStrength\n",
-    "        self.returnStrength = returnStrength\n",
+    "        self.serveStrength = 58*serveStrength # Tour average of service points won is 58%\n",
+    "        self.returnStrength = 42*returnStrength # Tour average of return points won is 42%\n",
     "        self.form = form\n",
     "        self.hardStrength = hardStrength\n",
     "        self.clayStrength = clayStrength\n",
@@ -91,19 +91,19 @@
     "            init method where serve, return and form multipliers are assigned random values\n",
     "        \n",
     "        Params:\n",
-    "            name (str):    The name of the player\n",
+    "            name (str): The name of the player\n",
     "        \"\"\"\n",
     "        # Player Identity\n",
     "        self.name = name\n",
     "        self.playerID = Player.idCounter\n",
     "        \n",
     "        # Player attributes\n",
-    "        self.serveStrength = np.random.normal(loc=1.0, scale=0.5)\n",
-    "        self.returnStrength = np.random.normal(loc=1.0, scale=0.5)\n",
-    "        self.form = np.random.normal(loc=1.0, scale=0.5)\n",
-    "        self.hardStrength = np.random.normal(loc=1.0, scale=0.5)\n",
-    "        self.clayStrength = np.random.normal(loc=1.0, scale=0.5)\n",
-    "        self.grassStrength = np.random.normal(loc=1.0, scale=0.5)\n",
+    "        self.serveStrength = 58*np.random.normal(loc=1.0, scale=0.5) # Tour average of service points won is 58%\n",
+    "        self.returnStrength = 42*np.random.normal(loc=1.0, scale=0.5)  # Tour average of return points won is 42%\n",
+    "        self.form = np.random.normal(loc=1.0, scale=1)\n",
+    "        self.hardStrength = np.random.normal(loc=1.0, scale=1)\n",
+    "        self.clayStrength = np.random.normal(loc=1.0, scale=1)\n",
+    "        self.grassStrength = np.random.normal(loc=1.0, scale=1)\n",
     "        \n",
     "        # Player stats\n",
     "        self.gamesPlayed = 0\n",
@@ -119,32 +119,32 @@
     "        # Increment ID counter to ensure every player has a unique ID\n",
     "        Player.idCounter += 1\n",
     "        \n",
-    "        def increment_tournament_win(self, tournamentType):\n",
-    "            \"\"\"\n",
-    "            Method:\n",
-    "                Increments the type of tournament the player won\n",
-    "                \n",
-    "            Params:\n",
-    "                tournamentType (str):   The type of tournament won e.g. ATP 500\n",
-    "            \"\"\"\n",
-    "            self.tournamentsWon[tournamentType] += 1\n",
-    "        \n",
-    "        def increment_points(self, points):\n",
-    "            \"\"\"\n",
-    "            Method:\n",
-    "                Increments the players ranking points by given points\n",
-    "                \n",
-    "            Params:\n",
-    "                points (int):   The amount of points to increment by\n",
-    "            \"\"\"\n",
-    "            self.rankingPoints += points\n",
+    "    def increment_tournament_win(self, tournamentType):\n",
+    "        \"\"\"\n",
+    "        Method:\n",
+    "            Increments the type of tournament the player won\n",
     "            \n",
-    "        def increment_games_played(self):\n",
-    "            \"\"\"\n",
-    "            Method:\n",
-    "                Increments the gamesPlayed attribute\n",
-    "            \"\"\"\n",
-    "            self.gamesPlayed += 1"
+    "        Params:\n",
+    "            tournamentType (str): The type of tournament won e.g. ATP 500\n",
+    "        \"\"\"\n",
+    "        self.tournamentsWon[tournamentType] += 1\n",
+    "    \n",
+    "    def increment_points(self, points):\n",
+    "        \"\"\"\n",
+    "        Method:\n",
+    "            Increments the players ranking points by given points\n",
+    "            \n",
+    "        Params:\n",
+    "            points (int): The amount of points to increment by\n",
+    "        \"\"\"\n",
+    "        self.rankingPoints += points\n",
+    "        \n",
+    "    def increment_games_played(self):\n",
+    "        \"\"\"\n",
+    "        Method:\n",
+    "            Increments the gamesPlayed attribute\n",
+    "        \"\"\"\n",
+    "        self.gamesPlayed += 1"
    ]
   },
   {
@@ -179,11 +179,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Tournament():\n",
+    "    def __init__(self, courtType):\n",
+    "        self.courtType = courtType\n",
+    "        \n",
+    "    def get_points_for_round(self, round):\n",
+    "        \"\"\"\n",
+    "        Method:\n",
+    "            Returns the points associated for a given round\n",
+    "            \n",
+    "        Params:\n",
+    "            round (str): The given round\n",
+    "        \n",
+    "        Returns:\n",
+    "            roundPoints (int): The points associated with the round\n",
+    "        \"\"\"\n",
+    "        return self.roundPoints[round]\n",
+    "    \n",
+    "    def generate_draw(self, players):\n",
+    "        \"\"\"\n",
+    "        Method:\n",
+    "            Generates the draw for a tournament \n",
+    "        \n",
+    "        Params:\n",
+    "            players ([Player]): The list of the players playing the tournament\n",
+    "            \n",
+    "        Returns:\n",
+    "            draw ([Match]): A list that contains all the first round matches\n",
+    "         \n",
+    "        TODO: Create draw so that seeded pairings 1,2,3,4 are all on opposite sides\n",
+    "        \"\"\"\n",
+    "        # Sort players in terms of rankings\n",
+    "        players = seed(players)\n",
+    "        \n",
+    "        # Seperate seeded players and non seeded players\n",
+    "        seededPlayers = players[:(self.drawsize/4)]\n",
+    "        nonSeededPlayers = players[(self.drawsize/4):]\n",
+    "        \n",
+    "        # Initial draw variables\n",
+    "        draw = []\n",
+    "        \n",
+    "        # Getting first matches for round 1 based off of seedings\n",
+    "        for match in range(self.drawsize/2):\n",
+    "            # getting random players that are seeded and not seeded\n",
+    "            if len(seededPlayers) > 0:\n",
+    "                seededIndex = np.random.uniform(low=0,high=len(seededPlayers))\n",
+    "                nonSeededIndex = np.random.uniform(low=0,high=len(nonSeededPlayers))\n",
+    "            # Some matches will have two non seeded players playing eachother\n",
+    "            else:\n",
+    "                seededIndex = np.random.uniform(low=0,high=len(nonSeededPlayers))\n",
+    "                nonSeededIndex = np.random.uniform(low=0,high=len(nonSeededPlayers))\n",
+    "            \n",
+    "            # Appending them to the first round\n",
+    "            draw.append(Match(seededPlayers[seededIndex], nonSeededPlayers[nonSeededIndex]))\n",
+    "            \n",
+    "            # Deleting random players from their respective lists\n",
+    "            del seededPlayers[seededIndex]\n",
+    "            del nonSeededPlayers[nonSeededIndex]\n",
+    "            \n",
+    "        return draw\n",
+    "        \n",
+    "        \n",
+    "class GrandSlam(Tournament):\n",
+    "    def __init__(self, courtType):\n",
+    "        super.__init__(self, courtType)\n",
+    "        self.roundPoints = {\n",
+    "            \"R1\": 10,\n",
+    "            \"R2\": 45,\n",
+    "            \"R3\": 90,\n",
+    "            \"R4\": 180,\n",
+    "            \"quarter final\": 360,\n",
+    "            \"semi final\": 720,\n",
+    "            \"finalist\": 1200,\n",
+    "            \"winner\": 2000\n",
+    "        }\n",
+    "        self.drawSize = 128\n",
+    "\n",
+    "class Master1000(Tournament):\n",
+    "    def __init__(self, courtType):\n",
+    "        super.__init__(self, courtType)\n",
+    "        self.roundPoints = {\n",
+    "            \"R1\": 10,\n",
+    "            \"R2\": 25,\n",
+    "            \"R3\": 45,\n",
+    "            \"R4\": 90,\n",
+    "            \"quarter final\": 180,\n",
+    "            \"semi final\": 360,\n",
+    "            \"finalist\": 600,\n",
+    "            \"winner\": 1000\n",
+    "        }\n",
+    "        self.drawSize = 128 \n",
+    "\n",
+    "class ATP500(Tournament):\n",
+    "    def __init__(self, courtType):\n",
+    "        super.__init__(self, courtType)\n",
+    "        self.roundPoints = {\n",
+    "            \"R1\": 20,\n",
+    "            \"R2\": 45,\n",
+    "            \"quarter final\": 90,\n",
+    "            \"semi final\": 180,\n",
+    "            \"finalist\": 300,\n",
+    "            \"winner\": 500\n",
+    "        }\n",
+    "        self.drawSize = 64\n",
+    "\n",
+    "class ATP250(Tournament):\n",
+    "    def __init__(self, courtType):\n",
+    "        super.__init__(self, courtType)\n",
+    "        self.roundPoints = {\n",
+    "            \"R1\": 10,\n",
+    "            \"R2\": 20,\n",
+    "            \"quarter final\": 45,\n",
+    "            \"semi final\": 90,\n",
+    "            \"finalist\": 150,\n",
+    "            \"winner\": 250\n",
+    "        }\n",
+    "        self.drawSize = 64\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Season():\n",
     "    pass"
    ]
   },
@@ -192,10 +316,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class Season():\n",
-    "    pass"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -206,8 +327,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
