Implemented init, generate_markov_chain, generate_markov_chain_index and simulate_point in the game class

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -149,12 +149,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Game():\n",
-    "    pass"
+    "    def __init__(self, server, returner):\n",
+    "        \"\"\" \n",
+    "        Method:\n",
+    "            init method for Game class\n",
+    "            \n",
+    "        Params:\n",
+    "            server (Player):   The player that is serving in the game\n",
+    "            returner (Player): The player that is returning in the game\n",
+    "        \"\"\"\n",
+    "        # Players\n",
+    "        self.server = server\n",
+    "        self.returner = returner\n",
+    "        \n",
+    "        # Markov Chain\n",
+    "        self.markovChainIndex = self.generate_markov_chain_index()\n",
+    "        self.markovChain = self.generate_markov_chain()\n",
+    "        \n",
+    "        # Points\n",
+    "        self.score = (0,0)\n",
+    "        self.pointProgression = [0, 15, 30, 40, (\"Hold\", \"Break\")]\n",
+    "        self.winner = None\n",
+    "    \n",
+    "    def simulate_point(self):\n",
+    "        \"\"\" \n",
+    "        Method:\n",
+    "            Simulates a point between the two players based off of\n",
+    "            probabilities obtained from the Markov Chain\n",
+    "            \n",
+    "        Return:\n",
+    "            updatedScore (tuple(int|str,int|str)): The updated score after point simulation\n",
+    "        \"\"\"\n",
+    "        # Fetching each players points\n",
+    "        serverPoints = self.score[0]\n",
+    "        returnerPoints = self.score[1]\n",
+    "        \n",
+    "        # Fetching target scores for both players\n",
+    "        serverTargetIndex = self.pointProgression.index(serverPoints) + 1\n",
+    "        returnerTargetIndex = self.pointProgression.index(returnerPoints) + 1\n",
+    "        serverTargetScore = self.pointProgression[serverTargetIndex]\n",
+    "        returnerTargetScore = self.pointProgression[returnerTargetIndex]\n",
+    "        \n",
+    "        # Checking whether the target score results in a hold or a break\n",
+    "        if serverTargetIndex == len(self.pointProgression) - 1:\n",
+    "            serverTargetScore = \"Hold\"\n",
+    "        elif returnerTargetIndex == len(self.pointProgression) - 1:\n",
+    "            returnerTargetScore = \"Break\"\n",
+    "        \n",
+    "        # Fetching probability that server wins the point\n",
+    "        currentMarkovIndex = self.markovChainIndex[self.format_score(serverPoints,returnerPoints)]\n",
+    "        targetMarkovIndex = self.markovChainIndex[self.format_score(serverTargetScore, returnerPoints)]\n",
+    "        serverProb = self.markovChainIndex[currentMarkovIndex, targetMarkovIndex]\n",
+    "        \n",
+    "        # Randomly sampling to see if server wins the point\n",
+    "        sample = np.random.uniform(low=0,high=1)\n",
+    "        \n",
+    "        # Updating score based on random sample\n",
+    "        if sample <= serverProb:\n",
+    "            updatedScore = (serverTargetScore, returnerPoints)\n",
+    "        else:\n",
+    "            updatedScore = (serverPoints, returnerTargetScore)\n",
+    "        \n",
+    "        # If the updated score results in deuce we need to set it to 30-30 so markov indexing works\n",
+    "        if updatedScore == (40,40):\n",
+    "            updatedScore = (30,30)\n",
+    "        \n",
+    "        return updatedScore\n",
+    "            \n",
+    "    def simulate_game(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def generate_markov_chain(self):\n",
+    "        \"\"\"\n",
+    "        Method:\n",
+    "            Generates a markov chain of the point transitions of the game.\n",
+    "            Calculates probability of server winning the point based off of both\n",
+    "            the server and returners personal attributes. For simplicity deuce is \n",
+    "            simplified to 30-30 as they are essentially the same thing.\n",
+    "        \n",
+    "        Return:\n",
+    "            markovChain (List(List(float))): The generated markov chain\n",
+    "        \"\"\"\n",
+    "        # Obtaining probability that server will win each point based on player attributes\n",
+    "        sWin = (self.server.serveStrength * self.server.form)/(self.server.serveStrength * self.server.form + self.returner.returnStrength * self.returner.form)\n",
+    "        \n",
+    "        # The probability that the returner will win the point is just the compliment of the server's probability\n",
+    "        rWin = 1 - sWin\n",
+    "        \n",
+    "        # Creating Markov chain\n",
+    "        markovChain = np.array([# 0-0   15-0    30-0    40-0    0-15    0-30    0-40    15-15   30-15   40-15   15-30   15-40   30-30   40-30   30-40   Hold    Break\n",
+    "                                [  0,   sWin,     0,      0,    rWin,     0,      0,      0,      0,      0,      0,       0,     0,      0,      0,     0,      0    ],# 0-0     \n",
+    "                                [  0,     0,    sWin,     0,      0,      0,      0,     rWin,    0,      0,      0,       0,     0,      0,      0,     0,      0    ],# 15-0\n",
+    "                                [  0,     0,      0,    sWin,     0,      0,      0,      0,     rWin,    0,      0,       0,     0,      0,      0,     0,      0    ],# 30-0\n",
+    "                                [  0,     0,      0,      0,      0,      0,      0,      0,      0,    rWin,     0,       0,     0,      0,      0,    sWin,    0    ],# 40-0      \n",
+    "                                [  0,     0,      0,      0,      0,    rWin,     0,     sWin,    0,      0,      0,       0,     0,      0,      0,     0,      0    ],# 0-15  \n",
+    "                                [  0,     0,      0,      0,      0,      0,      rWin,   0,      0,      0,     sWin,     0,     0,      0,      0,     0,      0    ],# 0-30\n",
+    "                                [  0,     0,      0,      0,      0,      0,      0,      0,      0,      0,      0,     sWin,    0,      0,      0,     0,      rWin ],# 0-40\n",
+    "                                [  0,     0,      0,      0,      0,      0,      0,      0,     sWin,    0,     rWin,     0,     0,      0,      0,     0,      0    ],# 15-15\n",
+    "                                [  0,     0,      0,      0,      0,      0,      0,      0,       0,     sWin,   0,       0,    rWin,    0,      0,     0,      0    ],# 30-15\n",
+    "                                [  0,     0,      0,      0,      0,      0,      0,      0,       0,     0,      0,       0,     0,     rWin,    0,     sWin,   0    ],# 40-15\n",
+    "                                [  0,     0,      0,      0,      0,      0,      0,      0,       0,     0,      0,     rWin,   sWin,    0,      0,     0,      0    ],# 15-30\n",
+    "                                [  0,     0,      0,      0,      0,      0,      0,      0,       0,     0,      0,       0,     0,      0,     sWin,   0,     rWin  ],# 15-40\n",
+    "                                [  0,     0,      0,      0,      0,      0,      0,      0,       0,     0,      0,       0,     0,      sWin,  rWin,   0,      0    ],# 30-30\n",
+    "                                [  0,     0,      0,      0,      0,      0,      0,      0,       0,     0,      0,       0,     rWin,   0,      0,     sWin,   0    ],# 40-30 (A-40)  \n",
+    "                                [  0,     0,      0,      0,      0,      0,      0,      0,       0,     0,      0,       0,     sWin,   0,      0,     0,     rWin  ],# 30-40 (40-A)\n",
+    "                                [  0,     0,      0,      0,      0,      0,      0,      0,       0,     0,      0,       0,     0,      0,      0,     1,      0    ],# Hold\n",
+    "                                [  0,     0,      0,      0,      0,      0,      0,      0,       0,     0,      0,       0,     0,      0,      0,     0,      1    ] # Break\n",
+    "                                ])\n",
+    "        \n",
+    "        return markovChain\n",
+    "    \n",
+    "    def generate_markov_chain_index(self):\n",
+    "        \"\"\" \n",
+    "        Method:\n",
+    "            Returns a dictionary of the indexes for the markov\n",
+    "            chain given a score\n",
+    "        \n",
+    "        Return:\n",
+    "            markovIndexes (dict)\n",
+    "        \"\"\"\n",
+    "        return { \"0-0\" : 0, \"15-0\" : 1, \"30-0\" : 2, \"40-0\" : 3, \"0-15\" : 4, \"0-30\" : 5, \"0-40\" : 6, \"15-15\" : 7, \"30-15\" : 8, \"40-15\" : 9, \"15-30\" : 10, \"15-40\" : 11, \"30-30\" : 12, \"40-30\" : 13, \"30-40\" : 14, \"Hold\" :15, \"Break\" : 16 }\n",
+    "    \n",
+    "    def format_score(self, score=None):\n",
+    "        \"\"\" \n",
+    "        Method:\n",
+    "            Formats a score to a string\n",
+    "        \n",
+    "        Params:\n",
+    "            score (None|tuple(int|str, int|str)): The score that will be formatted. If none,\n",
+    "                                                  formats the game classes own score.\n",
+    "                        \n",
+    "        Return:\n",
+    "            formattedScore (str): The formatted score\n",
+    "        \"\"\"\n",
+    "        if score != None:\n",
+    "            return f'{score[0]}-{score[1]}'\n",
+    "        else:\n",
+    "            return f'{self.score[0]}-{self.score[1]}'"
    ]
   },
   {
@@ -206,10 +342,10 @@
     "            Generates the draw for a tournament \n",
     "        \n",
     "        Params:\n",
-    "            players ([Player]): The list of the players playing the tournament\n",
+    "            players (List(Player)): The list of the players playing the tournament\n",
     "            \n",
     "        Returns:\n",
-    "            draw ([Match]): A list that contains all the first round matches\n",
+    "            draw (List(Match)): A list that contains all the first round matches\n",
     "         \n",
     "        TODO: Create draw so that seeded pairings 1,2,3,4 are all on opposite sides\n",
     "        \"\"\"\n",
@@ -227,12 +363,12 @@
     "        for match in range(self.drawsize/2):\n",
     "            # getting random players that are seeded and not seeded\n",
     "            if len(seededPlayers) > 0:\n",
-    "                seededIndex = np.random.uniform(low=0,high=len(seededPlayers))\n",
-    "                nonSeededIndex = np.random.uniform(low=0,high=len(nonSeededPlayers))\n",
+    "                seededIndex = int(np.random.uniform(low=0,high=len(seededPlayers)))\n",
+    "                nonSeededIndex = int(np.random.uniform(low=0,high=len(nonSeededPlayers)))\n",
     "            # Some matches will have two non seeded players playing eachother\n",
     "            else:\n",
-    "                seededIndex = np.random.uniform(low=0,high=len(nonSeededPlayers))\n",
-    "                nonSeededIndex = np.random.uniform(low=0,high=len(nonSeededPlayers))\n",
+    "                seededIndex = int(np.random.uniform(low=0,high=len(nonSeededPlayers)))\n",
+    "                nonSeededIndex = int(np.random.uniform(low=0,high=len(nonSeededPlayers)))\n",
     "            \n",
     "            # Appending them to the first round\n",
     "            draw.append(Match(seededPlayers[seededIndex], nonSeededPlayers[nonSeededIndex]))\n",
