Implemented simulate_game function

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -222,7 +222,23 @@
     "        return updatedScore\n",
     "            \n",
     "    def simulate_game(self):\n",
-    "        pass\n",
+    "        \"\"\" \n",
+    "        Method:\n",
+    "            Simulates the game\n",
+    "        \"\"\"\n",
+    "        while self.winner == None:\n",
+    "            # Simulate the point\n",
+    "            updatedScore = self.simulate_point()\n",
+    "            \n",
+    "            # If the game has a winner update to exit loop \n",
+    "            if \"Hold\" in updatedScore:\n",
+    "                self.winner = self.server\n",
+    "            elif \"Break\" in updatedScore:\n",
+    "                self.winner = self.returner\n",
+    "            \n",
+    "            # Update score\n",
+    "            self.score = updatedScore\n",
+    "            \n",
     "    \n",
     "    def generate_markov_chain(self):\n",
     "        \"\"\"\n",
