Implemented set class

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -180,7 +180,10 @@
     "        \"\"\" \n",
     "        Method:\n",
     "            Simulates a point between the two players based off of\n",
-    "            probabilities obtained from the Markov Chain\n",
+    "            probabilities obtained from the Markov Chain, While the we\n",
+    "            find the probabilities of transition to each absorption state,\n",
+    "            this function will be used along with monte-carlo to verify\n",
+    "            the probabilities of both stochastic methods.\n",
     "            \n",
     "        Return:\n",
     "            updatedScore (tuple(int|str,int|str)): The updated score after point simulation\n",
@@ -316,7 +319,85 @@
    "outputs": [],
    "source": [
     "class Set():\n",
-    "    pass"
+    "    def __init__(self, startingServer, startingReturner):\n",
+    "        \"\"\" \n",
+    "        Method:\n",
+    "            init method for set class, playerList will be used to determine\n",
+    "            who serves first and as such this will be decided in the match\n",
+    "            class.\n",
+    "            \n",
+    "        Params:\n",
+    "            startingServer (Player): The player that starts serving in the match\n",
+    "            startingReturner (Player): The player that starts returning in the match\n",
+    "        \"\"\"\n",
+    "        self.player1 = startingServer\n",
+    "        self.player2 = startingReturner\n",
+    "        self.playersList = [self.player1, self.player2]\n",
+    "        self.score = { self.player1 : 0, self.player2 : 0 }\n",
+    "        self.winner = None\n",
+    "        \n",
+    "    def simulate_set(self):\n",
+    "        \"\"\" \n",
+    "        Method:\n",
+    "            Simulates a set and updates the winner\n",
+    "        \n",
+    "        Return:\n",
+    "            nextServer (Player): the player that serves next\n",
+    "        \"\"\"\n",
+    "        # Setting server and returner index for playersList\n",
+    "        serverIndex = 0\n",
+    "        returnerIndex = 1\n",
+    "        # Initiating game list\n",
+    "        self.gameList = []\n",
+    "        \n",
+    "        # Simulating the set\n",
+    "        while self.winner == None:\n",
+    "            # Creating game object\n",
+    "            game = Game(self.playersList[serverIndex], self.playersList[returnerIndex])\n",
+    "            \n",
+    "            # Simulate the game\n",
+    "            game.simulate_game()\n",
+    "            \n",
+    "            # Tracking games\n",
+    "            self.gameList.append(game)\n",
+    "            \n",
+    "            # Getting winner and updating score\n",
+    "            gameWinner = game.winner\n",
+    "            self.score[gameWinner] += 1\n",
+    "            \n",
+    "            # If the set has a game score that wins at 6 games\n",
+    "            if max(self.score) == 6 and (self.score != (6,6) or self.score != (6,5)):\n",
+    "                # Updating the set win for the right player\n",
+    "                if self.score(0) == 6:\n",
+    "                    self.winner = self.player1\n",
+    "                else:\n",
+    "                    self.winner = self.player2\n",
+    "            \n",
+    "            # If the game score is 7-5 we should select winner appropriatly \n",
+    "            elif self.score == (7,5) or self.score == (5,7):\n",
+    "                # Updating winner\n",
+    "                if self.score[0] == 7:\n",
+    "                    self.winner = self.player1\n",
+    "                else:\n",
+    "                    self.winner = self.player2\n",
+    "            \n",
+    "            # If it is a tiebreak simulate accordingly\n",
+    "            elif self.score == (6,6):\n",
+    "                \"\"\"\n",
+    "                Figure out tiebreak class\n",
+    "                \"\"\"\n",
+    "            \n",
+    "            else:\n",
+    "                pass\n",
+    "            \n",
+    "            serverIndex = 0 if serverIndex == 1 else 1\n",
+    "            returnerIndex = 0 if returnerIndex == 1 else 1\n",
+    "        \n",
+    "        return self.playersList[serverIndex]  \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "        "
    ]
   },
   {
@@ -366,7 +447,7 @@
     "        TODO: Create draw so that seeded pairings 1,2,3,4 are all on opposite sides\n",
     "        \"\"\"\n",
     "        # Sort players in terms of rankings\n",
-    "        players = seed(players)\n",
+    "        players = sorted(players, key=lambda player: player.rankingPoints, reverse=True)\n",
     "        \n",
     "        # Seperate seeded players and non seeded players\n",
     "        seededPlayers = players[:(self.drawsize/4)]\n",
@@ -379,12 +460,12 @@
     "        for match in range(self.drawsize/2):\n",
     "            # getting random players that are seeded and not seeded\n",
     "            if len(seededPlayers) > 0:\n",
-    "                seededIndex = int(np.random.uniform(low=0,high=len(seededPlayers)))\n",
-    "                nonSeededIndex = int(np.random.uniform(low=0,high=len(nonSeededPlayers)))\n",
+    "                seededIndex = np.random.random_integers(low=0,high=len(seededPlayers))\n",
+    "                nonSeededIndex = np.random.random_integers(low=0,high=len(nonSeededPlayers))\n",
     "            # Some matches will have two non seeded players playing eachother\n",
     "            else:\n",
-    "                seededIndex = int(np.random.uniform(low=0,high=len(nonSeededPlayers)))\n",
-    "                nonSeededIndex = int(np.random.uniform(low=0,high=len(nonSeededPlayers)))\n",
+    "                seededIndex = np.random.random_integers(low=0,high=len(nonSeededPlayers))\n",
+    "                nonSeededIndex = np.random.random_integers(low=0,high=len(nonSeededPlayers))\n",
     "            \n",
     "            # Appending them to the first round\n",
     "            draw.append(Match(seededPlayers[seededIndex], nonSeededPlayers[nonSeededIndex]))\n",
@@ -401,12 +482,12 @@
     "        super.__init__(self, courtType)\n",
     "        self.roundPoints = {\n",
     "            \"R1\": 10,\n",
-    "            \"R2\": 45,\n",
-    "            \"R3\": 90,\n",
-    "            \"R4\": 180,\n",
-    "            \"quarter final\": 360,\n",
-    "            \"semi final\": 720,\n",
-    "            \"finalist\": 1200,\n",
+    "            \"R2\": 50,\n",
+    "            \"R3\": 100,\n",
+    "            \"R4\": 200,\n",
+    "            \"quarter final\": 400,\n",
+    "            \"semi final\": 800,\n",
+    "            \"finalist\": 1300,\n",
     "            \"winner\": 2000\n",
     "        }\n",
     "        self.drawSize = 128\n",
@@ -415,13 +496,12 @@
     "    def __init__(self, courtType):\n",
     "        super.__init__(self, courtType)\n",
     "        self.roundPoints = {\n",
-    "            \"R1\": 10,\n",
-    "            \"R2\": 25,\n",
-    "            \"R3\": 45,\n",
-    "            \"R4\": 90,\n",
-    "            \"quarter final\": 180,\n",
-    "            \"semi final\": 360,\n",
-    "            \"finalist\": 600,\n",
+    "            \"R1\": 30,\n",
+    "            \"R2\": 50,\n",
+    "            \"R3\": 100,\n",
+    "            \"quarter final\": 200,\n",
+    "            \"semi final\": 400,\n",
+    "            \"finalist\": 650,\n",
     "            \"winner\": 1000\n",
     "        }\n",
     "        self.drawSize = 128 \n",
@@ -430,11 +510,11 @@
     "    def __init__(self, courtType):\n",
     "        super.__init__(self, courtType)\n",
     "        self.roundPoints = {\n",
-    "            \"R1\": 20,\n",
-    "            \"R2\": 45,\n",
-    "            \"quarter final\": 90,\n",
-    "            \"semi final\": 180,\n",
-    "            \"finalist\": 300,\n",
+    "            \"R1\": 25,\n",
+    "            \"R2\": 50,\n",
+    "            \"quarter final\": 100,\n",
+    "            \"semi final\": 200,\n",
+    "            \"finalist\": 330,\n",
     "            \"winner\": 500\n",
     "        }\n",
     "        self.drawSize = 64\n",
@@ -443,11 +523,11 @@
     "    def __init__(self, courtType):\n",
     "        super.__init__(self, courtType)\n",
     "        self.roundPoints = {\n",
-    "            \"R1\": 10,\n",
-    "            \"R2\": 20,\n",
-    "            \"quarter final\": 45,\n",
-    "            \"semi final\": 90,\n",
-    "            \"finalist\": 150,\n",
+    "            \"R1\": 13,\n",
+    "            \"R2\": 25,\n",
+    "            \"quarter final\": 50,\n",
+    "            \"semi final\": 100,\n",
+    "            \"finalist\": 165,\n",
     "            \"winner\": 250\n",
     "        }\n",
     "        self.drawSize = 64\n"
