Implemented match class

--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,6 +318,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class Tiebreak():\n",
+    "    def __init__(self, server, returner):\n",
+    "        \"\"\" \n",
+    "        Method:\n",
+    "            init method for Game class\n",
+    "            \n",
+    "        Params:\n",
+    "            server (Player):   The player that is serving in the game\n",
+    "            returner (Player): The player that is returning in the game\n",
+    "        \"\"\"\n",
+    "        # Players\n",
+    "        self.server = server\n",
+    "        self.returner = returner\n",
+    "        \n",
+    "        # Markov Chain\n",
+    "        self.markovChainIndex = self.generate_markov_chain_index()\n",
+    "        self.markovChain = self.generate_markov_chain()\n",
+    "        \n",
+    "        # Points\n",
+    "        self.score = (0,0)\n",
+    "        self.pointProgression = [0, 15, 30, 40, (\"Hold\", \"Break\")]\n",
+    "        self.winner = None\n",
+    "    \n",
+    "    def generate_markov_chain():\n",
+    "        #TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Set():\n",
     "    def __init__(self, startingServer, startingReturner):\n",
     "        \"\"\" \n",
@@ -342,7 +375,7 @@
     "            Simulates a set and updates the winner\n",
     "        \n",
     "        Return:\n",
-    "            nextServer (Player): the player that serves next\n",
+    "            nextServer (tuple(Player)): the player that serves next idx 0 & returner at idx 1\n",
     "        \"\"\"\n",
     "        # Setting server and returner index for playersList\n",
     "        serverIndex = 0\n",
@@ -393,7 +426,7 @@
     "            serverIndex = 0 if serverIndex == 1 else 1\n",
     "            returnerIndex = 0 if returnerIndex == 1 else 1\n",
     "        \n",
-    "        return self.playersList[serverIndex]  \n",
+    "        return (self.playersList[serverIndex], self.playersList[returnerIndex])\n",
     "        \n",
     "        \n",
     "\n",
@@ -402,12 +435,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (3058717123.py, line 35)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 35\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31melse\u001b[39m\n        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m expected ':'\n"
+     ]
+    }
+   ],
    "source": [
     "class Match():\n",
-    "    pass"
+    "    def __init__(self, player1, player2, setFormat):\n",
+    "        # Match attributes\n",
+    "        self.player1 = player1\n",
+    "        self.player2 = player2\n",
+    "        self.winner = None\n",
+    "        self.setTarget = 2 if setFormat == 3 else 3\n",
+    "        self.score = (0,0)\n",
+    "        \n",
+    "        # Coin toss to see who starting server is\n",
+    "        coinToss = np.random.random_integers(low=1, high=2)\n",
+    "        self.startingServer = player1 if coinToss == 1 else player2\n",
+    "        self.startingReturner = player2 if coinToss == 1 else player1\n",
+    "        \n",
+    "    def simulate_match(self):\n",
+    "        # Initiating starting server and returner\n",
+    "        playerList = [self.startingServer, self.startingReturner]\n",
+    "        \n",
+    "        # Play sets until there is a winner of the match\n",
+    "        while self.winner == None:\n",
+    "            # Initiate current set\n",
+    "            currentSet = Set(playerList[0], playerList[1])\n",
+    "            \n",
+    "            # Simulating the set\n",
+    "            playerList = currentSet.simulate_set()\n",
+    "            \n",
+    "            # Incrementing score\n",
+    "            self.increment_score(currentSet.winner)\n",
+    "            \n",
+    "            # Checking if there is a winner\n",
+    "            if self.score[0] == self.setTarget:\n",
+    "                self.winner = self.player1\n",
+    "            elif self.score[1] == self.setTarget:\n",
+    "                self.winner = self.player2\n",
+    "            \n",
+    "    def increment_score(self, player):\n",
+    "        if player == self.player1:\n",
+    "            self.score[0] += 1\n",
+    "        else:\n",
+    "            self.score[1] += 1"
    ]
   },
   {
@@ -542,13 +622,6 @@
     "class Season():\n",
     "    pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
